--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Circles</title>
   <link rel="stylesheet" href="css/style.css">
   <script type="text/javascript" src="node_modules/paper/dist/paper-full.js"></script>
   <script type="text/paperscript" canvas="myCanvas">
